--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.11.1",
+    "eslint": "^4.18.1",
     "jest-expo": "25.0.0",
+    "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,9 +20,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react-native": "^3.2.1",
     "expo": "^25.0.0",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-elements": "^0.19.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   },
   "description": "A project for udacity nanodegree final assignment",
   "author": "Sujin Lee @sujinleeme",
