--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,13 @@
 .env.test.local
 .env.production.local
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# lock
+yarn.lock
+package-lock.json
+
+
