--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
-    "react-native-elements": "^0.19.0",
+    "react-native-elements": "^1.0.0-beta2",
+    "react-navigation": "^1.4.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2"
   },
