--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "eslint": "^4.18.1",
     "jest-expo": "25.0.0",
+    "react-native-debugger-open": "^0.3.17",
     "react-native-scripts": "1.11.1",
-    "react-test-renderer": "16.2.0"
+    "react-test-renderer": "16.2.0",
+    "redux-devtools-extension": "^2.13.2"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
+    "postinstall": "rndebugger-open --expo",
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
@@ -21,16 +23,20 @@
   },
   "dependencies": {
     "babel-eslint": "^8.2.2",
+    "eslint": "^4.18.2",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-react-native": "^3.2.1",
     "expo": "^25.0.0",
     "react": "16.2.0",
+    "react-devtools": "^3.1.0",
     "react-native": "0.52.0",
     "react-native-elements": "^1.0.0-beta2",
     "react-navigation": "^1.4.0",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "description": "A project for udacity nanodegree final assignment",
   "author": "Sujin Lee @sujinleeme",
