--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "jest-expo": "25.0.0",
     "react-native-debugger-open": "^0.3.17",
     "react-native-scripts": "1.11.1",
+    "react-navigation": "^1.5.0",
+    "react-navigation-redux-helpers": "^1.0.3",
     "react-test-renderer": "16.2.0",
     "redux-devtools-extension": "^2.13.2"
   },
@@ -32,7 +34,7 @@
     "react-devtools": "^3.1.0",
     "react-native": "0.52.0",
     "react-native-elements": "^1.0.0-beta2",
-    "react-navigation": "^1.4.0",
+    "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
