--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-react-native": "^3.2.1",
     "expo": "^25.0.0",
+    "prop-types": "^15.6.1",
     "react": "16.2.0",
     "react-devtools": "^3.1.0",
     "react-native": "0.52.0",
