--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "jest-expo": "25.0.0",
+    "react-native-card-stack-swiper": "^1.0.8",
     "react-native-debugger-open": "^0.3.17",
     "react-native-scripts": "1.11.1",
     "react-navigation": "^1.5.0",
