--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.52.0",
     "react-native-card-flip": "^1.0.3",
     "react-native-elements": "^1.0.0-beta4",
+    "react-native-modal": "^5.4.0",
     "react-native-svg": "^6.3.1",
     "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7",
