--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "postinstall": "rndebugger-open --expo",
+    "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'",
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
